# ai_system

./: Dockerfile  README.md  pyproject.toml  start.sh
app/: main.py
app/api/customer_service/: main.py
app/api/customer_service/bots/: conversation_bot.py  echo_bot.py
app/api/customer_service/endpoints/: local_llm.py
app/api/customer_service/routes/: chat.py  local_llm.py  teams_bot.py
app/api/customer_service/utilities/: config.py
app/api/customer_service/utilities/appManifest/: manifest.json
app/api/customer_service/utilities/bot_templates/: IntroCardTemplate.json  UserMentionCardTemplate.json
app/models/: model.py
