[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tharak-N <tharak.n@innovatily.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.5"
fastapi = {extras = ["standard"], version = "^0.115.6"}
langchain = "^0.3.12"
langchain-openai = "^0.2.12"
openai = "^1.57.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
